# fhe-gbdt-serving

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  benchmark_report.json  catboost_cookbook.json  docker-compose.yml  go.mod  lgbm_cookbook.txt  xgb_cookbook.json
.github/workflows/: ci.yml
.hypothesis/constants/: 50e9fe6d48a48be7  60c1a325b64bb0f6  da39a3ee5e6b4b0d
alerts/: alertmanager.yml
audits/: run_compliance_checks.sh
audits/compliance-reports/: COMPLIANCE_AUDIT_SUMMARY.md  HIPAA_COMPLIANCE_AUDIT_REPORT.md  ISO27001_2022_AUDIT_REPORT.md  ISO27701_PIMS_AUDIT_REPORT.md  SOC2_TYPE_II_AUDIT_REPORT.md
bench/: baselines.json  dashboard.html  moai_benchmark.py  package.json  playwright.config.ts
bench/cookbook/: common.py  report.py  run_all.py  run_recipe_catboost.py  run_recipe_lightgbm.py  run_recipe_xgboost.py
bench/runner/: bench_runner.py  perf_bench.py  regression.py
bench/tests/: perf.spec.ts
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
cli/: main.py  pyproject.toml  setup.py
cli/fhe_gbdt_cli/: __init__.py  config.py  main.py  output.py
cli/fhe_gbdt_cli/commands/: __init__.py  billing.py  config.py  keys.py  models.py  predict.py
cli/tests/: test_cli.py
config/: __init__.py  production.py
dashboards/grafana/: slo.json
deploy/: docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: gateway.yaml  hpa-pdb.yaml  runtime.yaml
deploy/kubernetes/: istio.yaml  keda.yaml  pdb.yaml
docs/: API_VERSIONING.md  ARCHITECTURE.md  BENCH_ENV.md  COMPETITIVE_ANALYSIS.md  CRYPTO_PARAMS.md  GAP_ANALYSIS.md  GBSP_SPEC.md  INCIDENTS.md  MOAI_IMPLEMENTATION_PLAN.md  MULTI_MODEL_IMPLEMENTATION_PLAN.md  OPERATIONS.md  PRICING.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_GAPS.py  RUNBOOKS.md  SECURITY_ROLES.md  SECURITY_TRAINING_PROGRAM.md  SLO.md  SYSTEM_AUDIT_PERFORMANCE.md  TEST_PLAN.md  THREAT_MODEL.md
docs/api/: openapi.yaml
docs/compliance/: CONTROL_MATRIX.md  DATA_FLOW.md
docs/cookbook/: 00_quickstart.md  01_xgboost_classification.md  02_lightgbm_regression.md  03_catboost_classification.md  04_tradeoffs.md  05_troubleshooting.md  README.md
infrastructure/statuspage/: config.yaml
instrumentation/: README.md  logging.go
legal/: BUSINESS_ASSOCIATE_AGREEMENT.md
portal/: package.json
portal/src/hooks/: useModels.ts  useUsage.ts
portal/src/pages/: index.tsx
proto/: abtesting.proto  auth.proto  batch.proto  billing.proto  control.proto  crypto.proto  inference.proto  metering.proto  monitoring.proto  regions.proto  versioning.proto  webhooks.proto
scripts/: gen_proto.sh  security_scan.sh
sdk/python/: README.md  __init__.py  client.py  crypto.py  features.py  model_export.py  preprocessing.py  preprocessor.py  pyproject.toml
sdk/typescript/: .npmignore  package.json  tsconfig.json
sdk/typescript/src/: auth.ts  client.ts  index.ts  types.ts
security/: SECURITY.md
services/abtesting/: server.go  server_test.go
services/audit/: audit_chain.py
services/auth/: server.go  server_test.go
services/batch/: server.go  server_test.go
services/billing/: server.go  server_test.go
services/billing/db/: schema.sql
services/compiler/: Dockerfile  column_packing.py  compiler.py  decision_tree_optimizer.py  glm_parser.py  ir.py  linear_optimizer.py  link_functions.py  main.py  optimizer.py  parser.py  random_forest_optimizer.py  sklearn_parser.py  validation.py
services/fhe/: __init__.py  concrete_backend.py  noise_budget.py  production_integration.py  tenseal_backend.py
services/gateway/: Dockerfile  main.go  metrics.go  otel.go  ratelimit.go  rest_api.go  server.go
services/gateway/auth/: auth.go
services/gateway/interceptors/: ratelimit.go
services/gateway/license/: license.go
services/gateway/mtls/: credentials.go
services/gateway/telemetry/: heartbeat.go
services/identity/: __init__.py  provider.py  sso.py
services/innovations/: __init__.py  bootstrap_aligned.py  federated_multikey.py  gradient_noise.py  homomorphic_pruning.py  leaf_centric.py  moai_native.py  polynomial_leaves.py  streaming_gradients.py  unified_architecture.py
services/integrations/: datadog.go  opentelemetry.go  prometheus.go
services/keystore/: Dockerfile  crypto.go  main.go  server.go
services/keystore/vault/: client.go
services/licensing/: heartbeat.py  license_token.py  plan_encryption.py
services/metering/: server.go  server_test.go
services/metering/db/: schema.sql
services/monitoring/: server.go  server_test.go
services/regions/: server.go  server_test.go
services/registry/: Dockerfile  main.go  server.go  versioning.go  versioning_test.go
services/registry/db/: schema.sql  store.go
services/rest-gateway/: server.go
services/runtime/: CMakeLists.txt  Dockerfile  gpu_accelerator.go  main.cpp
services/runtime/engine/: eval_key_cache.h  executor.cpp  executor.h  moai_executor.h
services/runtime/kernel/: backend.h  cpu_backend.h  crypto_context.cpp  crypto_context.h  metrics.h  noise_budget.h  novel_innovations.h  rotation_free_step.h  step_bundle.cpp  step_bundle.h
services/runtime/kernel/gpu/: gpu_backend.cu  gpu_backend.h
services/teams/: server.go  server_test.go
services/training/: __init__.py  federated.py  privacy.py  trainer.py
services/webhooks/: server.go  server_test.go
terraform-provider/: main.go
terraform-provider/examples/: main.tf
tests/: QA_REPORT.md  soak_report.json
tests/benchmarks/: benchmark_novel_innovations.py  benchmark_production_fhe.py
tests/e2e/: test_correctness.py  test_licensing_e2e.py  test_multi_model_e2e.py
tests/fuzz/: test_parser_fuzz.py
tests/integration/: test_ai_engineer_workflow.py  test_gateway_sdk.py  test_novel_innovations.py  test_production_fhe.py  test_rest_api.py
tests/qa/: test_audit_chain.py  test_cli_tool.py  test_training_all_gbdts.py  test_unified_identity.py
tests/soak/: soak_test.py
tests/unit/: test_comparator.py  test_compiler_ir.py  test_kernel_algebra.py  test_metamorphic.py  test_no_plaintext_logs.py
(+17 files in other folders)
